[tool.poetry]
name = "calculatorlibrary"
version = "0.1.0"
description = ""
authors = ["Ricardo Ferreira <jrsf68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
